syntax = "proto3";

package RabbitMqCommon.Impl.Proto;

message Envelope
{
	int32 TypeId = 1;
	bytes MessageBytes = 2;
};

message ErrorMessage
{
	int32 ErrorCode = 1;
	string Str = 2;
};
